--- a/project.json
+++ b/project.json
@@ -1,1 +1,1 @@
-{"game":"swimming_squid_battle","create_at":"2025-07-24 13:07:49","save_at":"2025/11/15 10:43:35","last_saved":"collect\\修改版.xml"}
+{"game":"swimming_squid_battle","create_at":"2025-07-24 13:07:49","save_at":"2026/01/28 14:38:10","last_saved":"train\\03.訓練模型.xml"}
